@@ -11,5 +11,6 @@ public:
   CXBMSDirectory(void);
   virtual ~CXBMSDirectory(void);
   virtual bool GetDirectory(const CStdString& strPath, CFileItemList &items);
+  virtual bool Exists(const char* strPath);
 };
 }
